src/test/deca/codegen/valid/SO/while.deca
// Description:
//    Programme utilisant des boucles while
//
// Resultats:
//    
//
// Historique:
//    cree le 14/01/2022

{
    int x = 0;
    int y = 5;
    float a = 5.0;
    float b = 4.0;
    ;
    while (x != 10) {
        x = x + 1;
    }
    y = y + x;

    while (a <= 34.5) {
        a = a + b;
    }
}
